fixed bottom spacing for responsive footer

--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -1,7 +1,6 @@
 @media screen {
 	footer {
 		position: fixed;
-		bottom: 2px;
 		background-color: #A3A3A3;
 		height: 20px;
 		padding-top: 5px;
@@ -11,6 +10,7 @@
 
 @media screen and (min-width: 800px) {
 	footer {
+		bottom: 2px;
 		width: 800px;
 		border-radius: 5px;
 		box-shadow: 5px 5px 6px #363636;
@@ -19,6 +19,7 @@
 
 @media screen and (max-width: 800px) {
 	footer {
+		bottom: 0px;
 		width: 100%;
 	}
 }
